--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "node": ">=24.12 <25"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.4.1",
     "@sentry/nextjs": "^10.38.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
