feat(admin): add LZT Market API backend proxy and admin integration UI

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -57,6 +57,15 @@ FRONTEND_URL=http://localhost:3000
 
 # Feature Service URL (for cross-service calls)
 FEATURE_SERVICE_URL=http://localhost:5000
+SERVICE_TOKEN=dev-service-token
+
+# LZT Market API integration (keep token secret in backend only)
+# Docs suggest timeout >= 300 seconds and delay >= 200ms between requests.
+LZT_MARKET_BASE_URL=https://prod-api.lzt.market
+LZT_MARKET_TOKEN=
+LZT_MARKET_TIMEOUT_SECONDS=300
+LZT_MARKET_MIN_INTERVAL_MS=200
+LZT_MARKET_INSECURE_SKIP_VERIFY=false
 
 # Optional: Admin seed (first run only)
 ADMIN_EMAIL=admin@example.com
