feat(market): add public ChatGPT listing and checkout flow via LZT proxy

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -66,6 +66,7 @@ LZT_MARKET_TOKEN=
 LZT_MARKET_TIMEOUT_SECONDS=300
 LZT_MARKET_MIN_INTERVAL_MS=200
 LZT_MARKET_INSECURE_SKIP_VERIFY=false
+LZT_MARKET_ITEM_URL_TEMPLATE=https://lzt.market/{item_id}
 
 # Optional: Admin seed (first run only)
 ADMIN_EMAIL=admin@example.com
