feat(market): internalize chatgpt checkout and enrich account specs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -67,6 +67,13 @@ LZT_MARKET_TIMEOUT_SECONDS=300
 LZT_MARKET_MIN_INTERVAL_MS=200
 LZT_MARKET_INSECURE_SKIP_VERIFY=false
 LZT_MARKET_ITEM_URL_TEMPLATE=https://lzt.market/{item_id}
+# Direct buy endpoint template for internal checkout flow.
+# Adjust this based on your latest LZT Market docs.
+# For ChatGPT docs: use /{item_id}/fast-buy
+LZT_MARKET_BUY_PATH_TEMPLATE=/{item_id}/fast-buy
+LZT_MARKET_BUY_METHOD=POST
+LZT_MARKET_BUY_CONTENT_TYPE=json
+LZT_MARKET_BUY_MAX_RETRIES=100
 
 # Optional: Admin seed (first run only)
 ADMIN_EMAIL=admin@example.com
