feat(market): align chatgpt flow with docs and compact drawer UI

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -71,6 +71,9 @@ LZT_MARKET_ITEM_URL_TEMPLATE=https://lzt.market/{item_id}
 # Adjust this based on your latest LZT Market docs.
 # For ChatGPT docs: use /{item_id}/fast-buy
 LZT_MARKET_BUY_PATH_TEMPLATE=/{item_id}/fast-buy
+# Optional fallback endpoints (used when fast-buy fails with non-hard-fail reason)
+LZT_MARKET_CHECK_PATH_TEMPLATE=/{item_id}/check-account
+LZT_MARKET_CONFIRM_PATH_TEMPLATE=/{item_id}/confirm-buy
 LZT_MARKET_BUY_METHOD=POST
 LZT_MARKET_BUY_CONTENT_TYPE=json
 LZT_MARKET_BUY_MAX_RETRIES=100
