feat(market): atomic wallet checkout with supplier balance check and realtime IDR pricing

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -77,6 +77,10 @@ LZT_MARKET_CONFIRM_PATH_TEMPLATE=/{item_id}/confirm-buy
 LZT_MARKET_BUY_METHOD=POST
 LZT_MARKET_BUY_CONTENT_TYPE=json
 LZT_MARKET_BUY_MAX_RETRIES=100
+MARKET_FX_CACHE_SECONDS=180
+MARKET_FX_API_URL_TEMPLATE=https://api.exchangerate.host/latest?base={base}&symbols=IDR
+MARKET_PRICE_MARGIN_PERCENT=0
+MARKET_PRICE_FIXED_FEE_IDR=0
 
 # Optional: Admin seed (first run only)
 ADMIN_EMAIL=admin@example.com
