--- a/backend/.env.example
+++ b/backend/.env.example
@@ -78,7 +78,7 @@ LZT_MARKET_BUY_METHOD=POST
 LZT_MARKET_BUY_CONTENT_TYPE=json
 LZT_MARKET_BUY_MAX_RETRIES=100
 MARKET_FX_CACHE_SECONDS=180
-MARKET_FX_API_URL_TEMPLATE=https://api.exchangerate.host/latest?base={base}&symbols=IDR
+MARKET_FX_API_URL_TEMPLATE=https://open.er-api.com/v6/latest/{base}
 MARKET_PRICE_MARGIN_PERCENT=0
 MARKET_PRICE_FIXED_FEE_IDR=0
 
