feat(market): use idr divided by factor and add fast listing refresh

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -79,8 +79,10 @@ LZT_MARKET_BUY_CONTENT_TYPE=json
 LZT_MARKET_BUY_MAX_RETRIES=100
 MARKET_FX_CACHE_SECONDS=180
 MARKET_FX_API_URL_TEMPLATE=https://open.er-api.com/v6/latest/{base}
-MARKET_PRICE_MARGIN_PERCENT=0
-MARKET_PRICE_FIXED_FEE_IDR=0
+MARKET_CHATGPT_CACHE_SECONDS=8
+# Final user price formula: (price in IDR) / MARKET_PRICE_FACTOR
+# Example: 50_000 / 0.80 = 62_500
+MARKET_PRICE_FACTOR=0.80
 
 # Optional: Admin seed (first run only)
 ADMIN_EMAIL=admin@example.com
