--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,14 @@ env:
   NODE_VERSION: "24"
   DOTNET_VERSION: "8.0.x"
 
+  # Deterministic cache locations across runners
+  GO_CACHE_DIR: ${{ github.workspace }}/.cache/go-build
+  GO_MOD_CACHE_DIR: ${{ github.workspace }}/.cache/go-mod
+  DOTNET_CLI_HOME: ${{ github.workspace }}/.cache/dotnet
+  NUGET_PACKAGES: ${{ github.workspace }}/.cache/nuget
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: "1"
+  DOTNET_NOLOGO: "1"
+
   # Coverage thresholds (enterprise standard)
   MIN_COVERAGE_BACKEND: 60
   MIN_COVERAGE_FEATURE_SERVICE: 50
@@ -214,7 +222,10 @@ jobs:
       - name: Build
         run: npm run build
         env:
+          API_BASE_URL: https://api.aivalid.id
+          NEXT_PUBLIC_API_BASE_URL: https://api.aivalid.id
           NEXT_PUBLIC_BACKEND_URL: https://api.aivalid.id
+          PREBUILD_HEALTHCHECK_STRICT: "false"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -240,8 +251,35 @@ jobs:
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Run npm audit
-        run: npm audit --audit-level=high || true
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run npm audit (JSON)
+        run: npm audit --audit-level=high --json > audit.json || true
+
+      - name: Enforce critical vulnerability policy
+        run: |
+          node -e '
+          const fs = require("fs");
+          const report = JSON.parse(fs.readFileSync("audit.json", "utf8"));
+          const vulns = report?.metadata?.vulnerabilities || {};
+          const critical = Number(vulns.critical || 0);
+          const high = Number(vulns.high || 0);
+          console.log(`npm audit summary -> critical=${critical}, high=${high}`);
+          if (critical > 0) {
+            console.error("Critical vulnerabilities detected. Failing security gate.");
+            process.exit(1);
+          }
+          if (high > 0) {
+            console.warn("High vulnerabilities detected. Not blocking yet; remediation required.");
+          }'
+
+      - name: Upload audit artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-npm-audit
+          path: frontend/audit.json
+          retention-days: 7
 
   # ==========================================================================
   # Stage 3: Backend Pipeline (Go 1.24 / Gin / Ent ORM)
@@ -250,6 +288,9 @@ jobs:
   backend-lint:
     name: 🔍 Backend Lint
     runs-on: ubuntu-latest
+    env:
+      GOCACHE: ${{ env.GO_CACHE_DIR }}
+      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
     defaults:
       run:
         working-directory: backend
@@ -262,6 +303,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: backend/go.sum
+
+      - name: Prepare Go cache directories
+        run: mkdir -p "$GOCACHE" "$GOMODCACHE"
 
       - name: Run go vet
         run: go vet ./...
@@ -276,12 +320,15 @@ jobs:
       - name: Check go mod tidy
         run: |
           go mod tidy
-          git diff --exit-code go.mod go.sum || echo "::warning::go.mod or go.sum needs tidying"
+          git diff --exit-code go.mod go.sum
 
   backend-build:
     name: 🏗️ Backend Build
     runs-on: ubuntu-latest
     needs: backend-lint
+    env:
+      GOCACHE: ${{ env.GO_CACHE_DIR }}
+      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
     defaults:
       run:
         working-directory: backend
@@ -294,6 +341,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: backend/go.sum
+
+      - name: Prepare Go cache directories
+        run: mkdir -p "$GOCACHE" "$GOMODCACHE"
 
       - name: Download dependencies
         run: go mod download
@@ -345,6 +395,8 @@ jobs:
     env:
       DATABASE_URL: postgres://test:test@localhost:5432/aivalid_test?sslmode=disable
       REDIS_URL: redis://localhost:6379
+      GOCACHE: ${{ env.GO_CACHE_DIR }}
+      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -354,6 +406,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: backend/go.sum
+
+      - name: Prepare Go cache directories
+        run: mkdir -p "$GOCACHE" "$GOMODCACHE"
 
       - name: Run tests with coverage
         run: |
@@ -371,6 +426,9 @@ jobs:
   backend-security:
     name: 🔒 Backend Security Scan
     runs-on: ubuntu-latest
+    env:
+      GOCACHE: ${{ env.GO_CACHE_DIR }}
+      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
     defaults:
       run:
         working-directory: backend
@@ -382,6 +440,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+
+      - name: Prepare Go cache directories
+        run: mkdir -p "$GOCACHE" "$GOMODCACHE"
 
       - name: Run govulncheck (Official Go vulnerability scanner)
         run: |
@@ -401,6 +462,9 @@ jobs:
   feature-service-build:
     name: 🏗️ Feature Service Build
     runs-on: ubuntu-latest
+    env:
+      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
+      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
     defaults:
       run:
         working-directory: feature-service
@@ -412,6 +476,9 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Prepare NuGet cache directories
+        run: mkdir -p "$DOTNET_CLI_HOME" "$NUGET_PACKAGES"
 
       - name: Restore dependencies
         run: dotnet restore
@@ -438,6 +505,8 @@ jobs:
     env:
       MONGODB_CONNECTION_STRING: mongodb://localhost:27017/aivalid_test
       REDIS_CONNECTION_STRING: localhost:6379
+      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
+      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -447,14 +516,17 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
+      - name: Prepare NuGet cache directories
+        run: mkdir -p "$DOTNET_CLI_HOME" "$NUGET_PACKAGES"
+
       - name: Restore dependencies
         run: dotnet restore
 
       - name: Run tests with coverage
         run: |
-          dotnet test --no-restore --verbosity normal \
+          dotnet test --no-restore --configuration Release --verbosity normal \
             --collect:"XPlat Code Coverage" \
-            --results-directory ./coverage || true
+            --results-directory ./coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -467,6 +539,9 @@ jobs:
   feature-service-security:
     name: 🔒 Feature Service Security
     runs-on: ubuntu-latest
+    env:
+      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
+      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
     defaults:
       run:
         working-directory: feature-service
@@ -478,6 +553,9 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Prepare NuGet cache directories
+        run: mkdir -p "$DOTNET_CLI_HOME" "$NUGET_PACKAGES"
 
       - name: Restore dependencies
         run: dotnet restore
@@ -493,6 +571,9 @@ jobs:
     name: 🔐 PQC Cryptography Validation
     runs-on: ubuntu-latest
     needs: [backend-build, feature-service-build]
+    env:
+      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
+      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -501,6 +582,9 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Prepare NuGet cache directories
+        run: mkdir -p "$DOTNET_CLI_HOME" "$NUGET_PACKAGES"
 
       - name: Validate PQC implementation
         run: |
@@ -560,10 +644,15 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - secrets-scan
+      - license-check
       - frontend-build
+      - frontend-security
       - backend-test
+      - backend-security
       - feature-service-test
+      - feature-service-security
       - security-container
+      - security-infrastructure
       - pqc-validation
     steps:
       - name: Quality Gate Passed
