--- a/feature-service/src/FeatureService.Api/FeatureService.Api.csproj
+++ b/feature-service/src/FeatureService.Api/FeatureService.Api.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.6.0" />
     <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
