--- a/feature-service/tests/FeatureService.Api.Tests/FeatureService.Api.Tests.csproj
+++ b/feature-service/tests/FeatureService.Api.Tests/FeatureService.Api.Tests.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.1" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
