--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.4.1",
-    "@sentry/nextjs": "^10.38.0",
+    "@sentry/nextjs": "^10.39.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
     "@vercel/speed-insights": "^1.3.1",
@@ -56,6 +56,7 @@
     "typescript": "^5.9.3"
   },
   "overrides": {
+    "glob": "11.1.0",
     "jsdom": "28.0.0",
     "test-exclude": "7.0.1"
   }
