--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,12 @@ env:
   SECURITY_SEVERITY: "CRITICAL,HIGH"
 
 jobs:
+  # Lane routing:
+  # - quick lane: pull_request and push to develop
+  # - full lane: push to main and scheduled runs
+
   # ==========================================================================
-  # Stage 1: Quick Checks (Parallel - Fast Feedback)
+  # Stage 1: Security & Compliance (Full Lane)
   # ==========================================================================
 
   # --------------------------------------------------------------------------
@@ -66,6 +70,7 @@ jobs:
   secrets-scan:
     name: 🔐 Secrets Detection
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     permissions:
       contents: read
       security-events: write
@@ -95,6 +100,7 @@ jobs:
   license-check:
     name: 📋 License Compliance
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -453,6 +459,7 @@ jobs:
   backend-security:
     name: 🔒 Backend Security Scan
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     env:
       GOCACHE: ${{ env.GO_CACHE_DIR }}
       GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
@@ -566,6 +573,7 @@ jobs:
   feature-service-security:
     name: 🔒 Feature Service Security
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     env:
       DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
       NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
@@ -638,6 +646,7 @@ jobs:
   pqc-validation:
     name: 🔐 PQC Cryptography Validation
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     needs: [backend-build, feature-service-build]
     env:
       DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
@@ -675,6 +684,7 @@ jobs:
   security-container:
     name: 🐳 Container Security
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -691,6 +701,7 @@ jobs:
   security-infrastructure:
     name: 🏗️ Infrastructure Security
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -707,9 +718,33 @@ jobs:
   # Stage 7: Quality Gates (Final Validation)
   # ==========================================================================
 
-  quality-gate:
-    name: ✅ Quality Gate
+  quality-gate-quick:
+    name: ✅ Quality Gate (Quick Lane)
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/develop')
+    needs:
+      - frontend-build
+      - frontend-security
+      - backend-test
+      - feature-service-test
+    steps:
+      - name: Quick Lane Passed
+        run: |
+          echo "=========================================="
+          echo "✅ Quick lane quality gates passed!"
+          echo "=========================================="
+          echo ""
+          echo "📦 Frontend: lint/type/test/build passed"
+          echo "🔧 Backend: lint/build/test passed"
+          echo "⚙️ Feature Service: build/test passed"
+          echo "🔐 Dependency gate: passed for frontend production audit"
+          echo ""
+          echo "Ready for merge validation."
+
+  quality-gate-full:
+    name: ✅ Quality Gate (Full Lane)
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     needs:
       - secrets-scan
       - license-check
@@ -723,10 +758,10 @@ jobs:
       - security-infrastructure
       - pqc-validation
     steps:
-      - name: Quality Gate Passed
+      - name: Full Lane Passed
         run: |
           echo "=========================================="
-          echo "✅ All quality gates passed!"
+          echo "✅ Full lane quality gates passed!"
           echo "=========================================="
           echo ""
           echo "📦 Frontend: Build successful"
@@ -744,8 +779,8 @@ jobs:
   deployment-report:
     name: 📊 Deployment Report
     runs-on: ubuntu-latest
-    needs: quality-gate
-    if: github.ref == 'refs/heads/main'
+    needs: quality-gate-full
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Generate deployment report
         run: |
