fix(ci): restore workflow validation and branch protection fallback

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -328,8 +328,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 25
     env:
-      GOCACHE: ${{ env.GO_CACHE_DIR }}
-      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
+      GOCACHE: ${{ github.workspace }}/.cache/go-build
+      GOMODCACHE: ${{ github.workspace }}/.cache/go-mod
     defaults:
       run:
         working-directory: backend
@@ -367,8 +367,8 @@ jobs:
     timeout-minutes: 30
     needs: backend-lint
     env:
-      GOCACHE: ${{ env.GO_CACHE_DIR }}
-      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
+      GOCACHE: ${{ github.workspace }}/.cache/go-build
+      GOMODCACHE: ${{ github.workspace }}/.cache/go-mod
     defaults:
       run:
         working-directory: backend
@@ -436,8 +436,8 @@ jobs:
     env:
       DATABASE_URL: postgres://test:test@localhost:5432/aivalid_test?sslmode=disable
       REDIS_URL: redis://localhost:6379
-      GOCACHE: ${{ env.GO_CACHE_DIR }}
-      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
+      GOCACHE: ${{ github.workspace }}/.cache/go-build
+      GOMODCACHE: ${{ github.workspace }}/.cache/go-mod
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -470,8 +470,8 @@ jobs:
     timeout-minutes: 25
     if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     env:
-      GOCACHE: ${{ env.GO_CACHE_DIR }}
-      GOMODCACHE: ${{ env.GO_MOD_CACHE_DIR }}
+      GOCACHE: ${{ github.workspace }}/.cache/go-build
+      GOMODCACHE: ${{ github.workspace }}/.cache/go-mod
     defaults:
       run:
         working-directory: backend
@@ -507,8 +507,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     env:
-      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
-      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
+      DOTNET_CLI_HOME: ${{ github.workspace }}/.cache/dotnet
+      NUGET_PACKAGES: ${{ github.workspace }}/.cache/nuget
     defaults:
       run:
         working-directory: feature-service
@@ -550,8 +550,8 @@ jobs:
     env:
       MONGODB_CONNECTION_STRING: mongodb://localhost:27017/aivalid_test
       REDIS_CONNECTION_STRING: localhost:6379
-      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
-      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
+      DOTNET_CLI_HOME: ${{ github.workspace }}/.cache/dotnet
+      NUGET_PACKAGES: ${{ github.workspace }}/.cache/nuget
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -587,8 +587,8 @@ jobs:
     timeout-minutes: 25
     if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     env:
-      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
-      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
+      DOTNET_CLI_HOME: ${{ github.workspace }}/.cache/dotnet
+      NUGET_PACKAGES: ${{ github.workspace }}/.cache/nuget
     defaults:
       run:
         working-directory: feature-service
@@ -662,8 +662,8 @@ jobs:
     if: github.event_name == 'schedule' || (github.event_name == 'push' && github.ref == 'refs/heads/main')
     needs: [backend-build, feature-service-build]
     env:
-      DOTNET_CLI_HOME: ${{ env.DOTNET_CLI_HOME }}
-      NUGET_PACKAGES: ${{ env.NUGET_PACKAGES }}
+      DOTNET_CLI_HOME: ${{ github.workspace }}/.cache/dotnet
+      NUGET_PACKAGES: ${{ github.workspace }}/.cache/nuget
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
