refactor(runtime): harden redis init and mongo partial index compatibility

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,17 @@ RATE_LIMIT_ENABLE_USER_LIMIT=true
 RATE_LIMIT_WHITELIST_IPS=
 RATE_LIMIT_BLACKLIST_IPS=
 
+# Redis (optional, recommended for distributed rate limits/sessions)
+# Preferred format (managed Redis): rediss://user:password@host:port/db
+REDIS_URL=
+# Fallback fields (used only when REDIS_URL is empty)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+# Development-only escape hatch.
+# When true, backend retries plain TCP if REDIS_URL TLS handshake fails.
+REDIS_ALLOW_INSECURE_FALLBACK=false
+
 # Database (PostgreSQL)
 DATABASE_URL=postgresql://user:password@localhost:5432/aivalid?sslmode=disable
 
