feat(account): enforce telegram auth for validation-case contact

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,6 +51,11 @@ JWT_REFRESH_EXPIRY=168h
 # TOTP (2FA) Configuration
 TOTP_ISSUER=AIValid
 
+# Telegram Login Widget (verified Telegram account linking)
+TELEGRAM_BOT_TOKEN=
+# Maximum age (seconds) accepted for Telegram auth_date payload
+TELEGRAM_AUTH_MAX_AGE_SECONDS=600
+
 # Email (SMTP) Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
