fix(market): support confirm-buy fallback for provider validation failures

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -93,6 +93,9 @@ LZT_MARKET_CONFIRM_PATH_TEMPLATE=/{item_id}/confirm-buy
 LZT_MARKET_BUY_METHOD=POST
 LZT_MARKET_BUY_CONTENT_TYPE=json
 LZT_MARKET_BUY_MAX_RETRIES=100
+# Safety switch: keep false by default. If true, backend can fallback to /confirm-buy
+# when /fast-buy fails due provider validation/checker errors.
+LZT_MARKET_BUY_ALLOW_CONFIRM_FALLBACK=false
 MARKET_FX_CACHE_SECONDS=180
 MARKET_FX_API_URL_TEMPLATE=https://open.er-api.com/v6/latest/{base}
 MARKET_CHATGPT_CACHE_SECONDS=8
